@@ -3,7 +3,8 @@
 
   * MODIFIED:
     * removed old code in utils.py.
-    * if no connexion or no forecast can be parsed, a no data icon is now displayed in forecast sections.
+    * if no connexion or no forecast can be parsed, a no data icon is now displayed in forecast sections, and labels are
+     cleared.
 
   * ADDED:
     * a function to update a configuration file has been introduced.
